test/error/LexLiteralFloatUnderscoreExp.ci
public static class Test
{
	public static bool Run()
	{
		double a = 1_e2; //ERROR: Invalid floating-point number
		return true;
	}
}
